# rhizome

./: .gitignore  LICENSE  README.md  USAGE.md  pyproject.toml  sample-graph-query.py  sample-ingest.py  sample-query.py  shell.nix  test_run.py  text_sanitizer.py  utils.py
rhizome/: __init__.py  chunker.py  cli.py  embedder.py
test_notes/: 2023-01-01.md  2024-01-01.md  2025-01-01.md  2026-01-01.md  knowledge-management.md  machine-learning.md  personal-workflows.md  philosophy-of-knowledge.md
