[project]
name = "rhizome-cli"
version = "0.1.0"
description = "A rhizomatic Zettelkasten system for atomizing and connecting notes"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-ollama>=0.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
rhizome = "rhizome.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["rhizome"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
